Parsing gene expression and sample covariate information.
Committing now to assemble on large machine

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,10 @@ Depends:
     FacileData
 Imports:
     checkmate,
+    data.table,
     dplyr,
+    edgeR,
+    jsonlite,
     mice,
     stringr,
     tidyr
